<resources>
    <string name="app_name">DD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="server_url">http://androidtest.dev.damidev.com/api/</string>
    <string name="back_btn">Press again to exit app</string>
    <string name="facebook_app_id">185865158572485</string>
    <string name="search">SEARCH</string>
    <string name="search_by">Search by name or email</string>
    <string name="map">Map</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="edit_contact">Edit contact</string>
    <string name="edit_my_profile">Edit my profile </string>
    <string name="edit_profile">Edit profile </string>
    <string name="name">Name</string>
    <string name="name_">Name:</string>
    <string name="last_name">Last name</string>
    <string name="last_name_">Last name:</string>
    <string name="phone">Phone</string>
    <string name="phone_">Phone:</string>
    <string name="email">Email</string>
    <string name="email_">Email:</string>
    <string name="description_">Description:</string>
    <string name="show_favourites">Show favourites only</string>
    <string name="save">Save</string>
    <string name="save_changes">Save changes</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="add_contact">Add contact</string>
    <string name="edit">Edit</string>
</resources>
